--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://dasarisairam1993:Sairam@data7@cluster0.mongodb.net/appointmentDB?retryWrites=true&w=majority
+MONGO_URI=mongodb://127.0.0.1:27017/appointmentDB
 PORT=5000
